frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: nextjs-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs-frontend
  template:
    metadata:
      name: frontend-container
      labels:
        app: nextjs-frontend
    spec:
      containers:
        - name: nextjs-frontend
          image: 381492023411.dkr.ecr.ap-southeast-1.amazonaws.com/bento-frontend:3
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 170Mi
            limits:
              cpu: 1
              memory: 512Mi
