frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  selector:
    app: nextjs-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
